testcases/error/class.cpp
class A
{
    A A();
    int();
};
class B;

enum A;
enum A { A1, A2 };

enum B;
enum B { B1 };

enum C;
enum C {
    C1, C2
};

enum D {
    D1, D2
};

class D;
class D x;
class D {
    int d;
};